--- a/landing page/index.html
+++ b/landing page/index.html
@@ -33,6 +33,7 @@
     <em>Plan-Do-Check-Act (PDCA)</em>, que me ajudou a entender melhor processos de 
     melhoria contínua e gestão.
   </p>
+  <a href="P.I._ABNER E CIA.docx.pdf"  target="_blank"><strong>ARQUIVO DO PROJETO INTEGRADOR</strong></a>
 
   <p>
     Hoje sou estudante de <strong>Ciência da Computação</strong> na <strong>Universidade Vila Velha (UVV)</strong>, onde tenho explorado 
