--- a/landing page/currículo/curriculo.html
+++ b/landing page/currículo/curriculo.html
@@ -100,5 +100,11 @@ de mineração.</p></li>
     </tr>
     </tr>
   </table>
+  <a href="/homepage/index.html" target="_self"><strong>Voltar a página inicial</strong></a>
+
+  <footer>
+    <p>&copy; 2025 - Desenvolvido por Abner Cardozo</p>
+  </footer>
+
 </body>
 </html>
