--- a/landing page/serviços/serviços.html
+++ b/landing page/serviços/serviços.html
@@ -6,20 +6,39 @@
     <title>Serviços</title>
 </head>
 <body>
-    <h1>Serviços voltados ao desenvolvimento de HomePage</h1>
-    <table border="1">
-        <tr>
-            <td>
-                Página estática HTML e CSS
-            </td>
-            <td>Página dinâmica</td>
-            <td>Página completa</td>
-        </tr>
-        <tr>
-            <td>R$50,00</td>
-            <td>R$150,00</td>
-            <td>R$300,00</td>
-        </tr>
-    </table>
+   <h2>Meus Serviços</h2>
+<p>Confira os planos de desenvolvimento de sites que ofereço:</p>
+
+<table border="1" cellspacing="0" cellpadding="10">
+  <tr>
+    <th>Tipo de Site</th>
+    <th>Descrição</th>
+    <th>Preço</th>
+  </tr>
+  <tr>
+    <td><strong>Estático</strong></td>
+    <td>Ideal para páginas simples (restaurante, portfólio, academia). Rápido e funcional.</td>
+    <td>R$ 100,00 (1-2 páginas) <br> R$ 200,00 (3-5 páginas)</td>
+  </tr>
+  <tr>
+    <td><strong>Dinâmico</strong></td>
+    <td>Conteúdo atualizado com frequência (blogs, notícias, catálogo de produtos).</td>
+    <td>A partir de R$ 300,00</td>
+  </tr>
+  <tr>
+    <td><strong>Avançado</strong></td>
+    <td>Sites completos, com banco de dados, login de usuários e recursos personalizados.</td>
+    <td>A partir de R$ 500,00</td>
+  </tr>
+</table>
+    <p style="text-align:center; margin-top:20px;">
+  <a href="/contatos/contato.html"><button>Solicitar Orçamento</button></a>
+</p>
+
+    <a href="/homepage/index.html" target="_self"><strong>Voltar a página inicial</strong></a>
+    <footer>
+    <p>&copy; 2025 - Desenvolvido por Abner Cardozo</p>
+  </footer>
+
 </body>
 </html>
