--- a/landing page/currículo/curriculo.html
+++ b/landing page/currículo/curriculo.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     <h1>Meu Currículo</h1>
@@ -107,4 +109,18 @@ de mineração.</p></li>
   </footer>
 
 </body>
+<header class="main-header">
+    <div class="container">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="/homepage/index.html">Home</a></li>
+                <li><a href="/currículo/curriculo.html">Currículo</a></li>
+                <li><a href="/serviços/serviços.html">Serviços</a></li>
+                <li><a href="/contatos/contato.html">Contato</a></li>
+                <!-- Link para o GitHub pode ficar aqui ou em outra seção -->
+                <li><a href="https://github.com/abnercardozo/Landing-Page.git" target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </html>
