--- a/landing page/contatos/contato.html
+++ b/landing page/contatos/contato.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário para Contato</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     <h1>Formulário para Contato</h1>
@@ -57,4 +59,18 @@
   </footer>
 
 </body>
+<header class="main-header">
+    <div class="container">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="/homepage/index.html">Home</a></li>
+                <li><a href="/currículo/curriculo.html">Currículo</a></li>
+                <li><a href="/serviços/serviços.html">Serviços</a></li>
+                <li><a href="/contatos/contato.html">Contato</a></li>
+                <!-- Link para o GitHub pode ficar aqui ou em outra seção -->
+                <li><a href="https://github.com/abnercardozo/Landing-Page.git" target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </html>
