--- a/landing page/contatos/contato.html
+++ b/landing page/contatos/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário para Contato</title>
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
 </head>
 <body>
     <h1>Formulário para Contato</h1>
