--- a/landing page/homepage/index.html
+++ b/landing page/homepage/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="icon" type="image/png" href="favicon-32x32.png">
 </head>
 <body>
     <h1>Bem-vindo à minha página!</h1>
@@ -23,8 +24,17 @@
     sempre me acompanham no dia a dia.
       </p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/KYvx2nfnA4Y?si=rcE4Ez8lBMdI8WkL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <img src="foto criança landing page.jpeg" width="450" alt="Foto Criança em cima de um teclado">
+    <img src="foto atual landing page.jpeg" width="450" alt="Foto atual">
+    <img src="foto landing page 8 anos.jpeg" width="450" alt="Foto Criança tocando saxofone">
 
+    <p>Como artista favorito tenho o Charlie Brown Jr que escuto desde a infância, além de ter Evangelion como o meu anime favorito.</p>
+    <h3>Hoje só procuro minha paz - Charlie Brown Jr</h3>
+    <audio controls>
+      <source src="Hoje Eu Só Procuro A Minha Paz [lXNZzC3_m3c].mp3" type="audio/mpeg">
+       Seu navegador não suporta a reprodução de áudio.
+    </audio>
+    <h3>Abertura de Evangelion</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CnVAiV1QkYM?si=g1bSDppAoJ3Jw9k9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>Trajetória Acadêmica</h2>
   <p>
     Minha trajetória acadêmica começou em diferentes escolas, tanto particulares 
