--- a/landing page/serviços/serviços.html
+++ b/landing page/serviços/serviços.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços</title>
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
 </head>
 <body>
    <h2>Meus Serviços</h2>
@@ -20,17 +20,17 @@
   <tr>
     <td><strong>Estático</strong></td>
     <td>Ideal para páginas simples (restaurante, portfólio, academia). Rápido e funcional.</td>
-    <td>R$ 100,00 (1-2 páginas) <br> R$ 200,00 (3-5 páginas)</td>
+    <td>R$ 150,00 (1-2 páginas) <br> R$ 300,00 (3-5 páginas)</td>
   </tr>
   <tr>
     <td><strong>Dinâmico</strong></td>
     <td>Conteúdo atualizado com frequência (blogs, notícias, catálogo de produtos).</td>
-    <td>A partir de R$ 300,00</td>
+    <td>A partir de R$ 600,00</td>
   </tr>
   <tr>
     <td><strong>Avançado</strong></td>
     <td>Sites completos, com banco de dados, login de usuários e recursos personalizados.</td>
-    <td>A partir de R$ 500,00</td>
+    <td>Valor a negociar</td>
   </tr>
 </table>
     <p style="text-align:center; margin-top:20px;">
